origin/master Add pontos_turisticos project static image files to .gitignore
-

Signed-off-by: MaximoDouglas <douglas.h.maximo@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,6 @@ dmypy.json
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
+
+# Static image files
+/pontos_turisticos/images
